--- a/OTOSimpleChat/AndroidManifest.xml
+++ b/OTOSimpleChat/AndroidManifest.xml
@@ -4,8 +4,6 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -29,7 +27,7 @@
         android:label="@string/app_name"
         android:name=".Application">
         <activity android:name="com.thinkspace.otosimplechat.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"  android:configChanges="keyboardHidden|orientation" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar" android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
