--- a/OpenTalkOnAndroidLib/project.properties
+++ b/OpenTalkOnAndroidLib/project.properties
@@ -13,4 +13,4 @@
 # Project target.
 target=android-8
 android.library=true
-android.library.reference.1=..\\..\\..\\project\\SlidingMenuLib
+android.library.reference.1=../SlidingMenuLib
